add maven-failsafe-plugin for integration tests
git-svn-id: svn://localhost/jahia/trunk@27607 69c369ed-ed09-0410-a4a1-e19a46c23626